# digipad-api

./: .flake8  .gitignore  README.md  copy_build_into_docs.py  mkdocs.yml  pyinst.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: build.yml  linting.yml
digipad/: __init__.py  __main__.py  edit.py  export.py  get_pads.py  progress.py  session.py  utils.py  web.py
digipad/app/: __init__.py  template.html
digipad/app/static/: editor.js  script.js  style.css  sw.js
docs/: cli.md  latest-build.md
docs/reference/: edit.md  get-pads.md  session.md
